--- a/src/components/DropDown.css
+++ b/src/components/DropDown.css
@@ -1,8 +1,10 @@
 .dropdown {
-    width: 30vw;
     display: flex;
     align-items: center;
     z-index: 100;
+    width: 50%;
+    justify-content: start;
+  
 
     span {
         color: rgb(221, 33, 33);
@@ -10,11 +12,10 @@
     }
 }
 
-@media(width < 400px ) {
+@media(width < 500px ) {
     .dropdown {
         width: 100vw;
         align-items: center;
         justify-content: center;
-        gap: 20px;
     }
 }
